# pyintradel

./: README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/: check_version.sh
.github/workflows/: build.yml  publish-pypi.yml
pyintradel/: __init__.py  api.py  main.py  parser.py  towns.py
pyintradel/api/: __init__.py  parser.py
tests/: __init__.py  api_get_data_test.py  api_test.py  mock.py
