[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyIntradel"
version = "0.0.6"
description = "Python interface for Intradel"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Thomas Germain", email = "12560542+thomasgermain@users.noreply.github.com" },
]
dependencies = [
    "aiohttp>=3.11,<4.0",
    "beautifulsoup4>=4.15,<5.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]

[project.urls]
Homepage = "https://github.com/thomasgermain/pyintradel"

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
    "mypy>=2.1",
    "pytest>=9.0",
    "build>=1.5",
]

[project.scripts]
pyintradel = "pyintradel.main:main"

[tool.hatch.build.targets.wheel]
packages = ["pyintradel"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Large scraped HTML fixture, kept verbatim for parser tests.
extend-exclude = ["tests/mock.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ERA", # eradicate (commented-out code)
    "UP",  # pyupgrade
]

[tool.mypy]
strict = true
ignore_missing_imports = true
show_error_context = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = "pyintradel.*"
implicit_reexport = true

[tool.pytest.ini_options]
testpaths = ["tests"]
